--- a/app/draft_a/draft_a.scss
+++ b/app/draft_a/draft_a.scss
@@ -49,7 +49,7 @@ body{ background-color: #0b0b0b; }
     position: relative; width:100%; max-width:1280px; margin: auto;
     &.grid-box-1{
       display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(2, 1fr);
-      min-height: 600px; gap: 24px;
+      min-height: 800px; gap: 24px; padding-top: 200px; 
       >.card-wrap{
         width:100%; border: 1px solid var(--gray-800);
         border-radius: 16px; padding: 10%; background-color: #0E0E0E;
