--- a/app/draft_a/draft_a.scss
+++ b/app/draft_a/draft_a.scss
@@ -9,9 +9,9 @@ body{ background-color: #0b0b0b; }
   >.gnb-menu-wrap{
     display: flex;
     >li{
-      margin-left: 24px;
+      margin-left: 40px;
       a{
-        text-transform: uppercase; font-weight: bold;
+        text-transform: uppercase; font-weight: bold; font-size:18px;
       }
     }
   }
@@ -52,9 +52,18 @@ body{ background-color: #0b0b0b; }
       min-height: 800px; gap: 24px; padding-top: 200px; 
       >.card-wrap{
         width:100%; border: 1px solid var(--gray-800);
-        border-radius: 16px; padding: 10%; background-color: #0E0E0E;
+        border-radius: 16px; padding: 8% 10%; background-color: #0E0E0E;
         &.long{
           grid-row: span 2;
+        }
+        >a{
+          display: block; width:100%; height:100%;
+          >h3{
+            font-size:32px; font-weight: bold; margin-bottom: 8px;
+          }
+          >p{
+            font-size: 20px; color:var(--gray-400); font-weight: bold;
+          }
         }
       }
     }
