--- a/app/draft_a/draft_a.scss
+++ b/app/draft_a/draft_a.scss
@@ -1,8 +1,8 @@
 
-body{ background-color: #0b0b0b; }
+body{ background-color: #141414; }
 
 .header {
-  position: fixed; width:100%; height:110px;
+  position: fixed; width:100%; height:104px;
   top:0; left:0; color:white; display: flex; justify-content: space-between;
   align-items: center; padding: 0 56px; z-index: 99999;
   mix-blend-mode: multiple;
@@ -21,25 +21,40 @@ body{ background-color: #0b0b0b; }
   .section-hero{
     position: relative; width:100%; height:100vh;
     display: flex; justify-content: center; align-items: center;
-    
+    flex-direction: column;
     .canvas-hero{
-      width:100%; height:100vh; position: absolute; top:0; left:0;  
+      width:100%; height:100%; top:0; left:0;  
     }
     .hero-headline-wrap{
-      width:100%; padding: 100px 14vw; z-index: 10;
-      >svg{
-        max-width: 100%;
+      position: absolute; width:100%; padding: 60px 14vw; z-index: 10;
+      display: flex; flex-direction: column; gap: 24px;
+      .hero-headline{
+        position: relative; margin: auto; width: 100%; max-width: 1100px;
       }
+      .hero-info-wrap{
+        width:100%; display: flex; justify-content: center; align-items: center;
+        font-size: 38px; font-weight: bold; color:var(--gray-300);
+        .divide-line{
+          display: block; width:1px; height: 32px; background-color: var(--gray-600);
+          margin:0 20px;
+        }
+      }
+      
     }
     .hero-back-mask{
-      position: absolute; overflow: hidden; width:calc(100% - 112px); height: calc(100vh - 160px);
-      margin:auto; left:0; right:0; bottom: 56px;
-      border-radius: 16px; border:1px solid #252525; filter: drop-shadow(4px 4px 16px rgba(0,0,0,0.9));
+      position: absolute; overflow: hidden; width:calc(100% - 112px); height: calc(100vh - 300px);
+      margin:auto; left:0; right:0; top:104px; display: flex; align-items: center;
+      border-radius: 16px; border:1px solid #252525; 
+      // filter: drop-shadow(4px 4px 16px rgba(0,0,0,0.9));
       &::before{
         content:''; display: block; position: absolute; width: 100%; height: 100%; 
         z-index: 5; left:0; top:0; 
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
       }
+    }
+    .register-bar{
+      width:calc(100% - 112px); height:140px; background-color: black; position: absolute;
+      bottom: 56px; border-radius: 16px;
     }
   }
 }
