--- a/app/draft_a/draft_a.scss
+++ b/app/draft_a/draft_a.scss
@@ -86,25 +86,57 @@ body{ background-color: black; }
       display: grid; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(2, 1fr);
       min-height: 800px; gap: 24px; padding-top: 200px; 
       >.card-wrap{
-        width:100%; border: 1px solid var(--gray-800);
-        border-radius: 16px; padding: 8% 10%; background-color: #030303;
+        position: relative; width:100%; border: 1px solid var(--gray-800);
+        border-radius: 16px; background-color: #030303; overflow: hidden;
+        transition: all 0.3s;
         &.long{
           grid-row: span 2;
         }
         >a{
-          display: block; width:100%; height:100%;
-          >h3{
-            font-size:32px; font-weight: bold; margin-bottom: 8px;
+          position: absolute; display: block; width:100%; height:100%;
+          top:0; left:0; padding: 8% 10%;
+          .card-title{
+            position: absolute; width:100%; z-index: 2;
+            >h3{
+              font-size:32px; font-weight: bold; margin-bottom: 8px;
+              z-index: 1;
+            }
+            >p{
+              font-size: 18px; color:var(--gray-400); font-weight: bold;
+              z-index: 1;
+            }
           }
-          >p{
-            font-size: 20px; color:var(--gray-400); font-weight: bold;
+          
+          >.card-icon{
+            position: absolute; width:120px; height:120px;
+            right: 24px; bottom:24px; 
+            transition: all 0.5s; 
+            
           }
+          &:hover{
+            >.card-icon{
+              animation:iconRotate 4s; 
+              animation-iteration-count: infinite;
+              animation-timing-function: linear;
+              animation-fill-mode: forwards;
+              // bottom: 30%; right:30%;
+            }  
+          }
+        }
+        &:hover{
+          background-color: #000000;
+          border: 1px solid #464646;
         }
       }
     }
   }
 }
-
+@keyframes iconRotate {
+  0%{ transform: rotateZ(0deg) scale(1.0);}
+  50%{ transform: rotateZ(180deg) scale(3.5);}
+  75%{ transform: rotateZ(270deg) scale(3.5);}
+  100%{ transform: rotateZ(359deg) scale(1.0);}
+}
 /*----------------*/
 
 .gradient-border {
