--- a/app/draft_b/draft_b.scss
+++ b/app/draft_b/draft_b.scss
@@ -8,11 +8,10 @@ body{ background-color: #0b0b0b; }
     display: flex; justify-content: center; align-items: center;
     &::before{
       content:''; display: block; position: absolute; width: 100%; height: 100%; 
-      z-index: 5; left:0; top:0; 
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0.95) 0%, rgba(0, 0, 0, 0.1) 100%);
+      z-index: 5; left:0; top:0; pointer-events: none;
     }
     .canvas-hero{
-      width:100%; height:100vh; position: absolute; top:0; left:0;  
+      width:100%; height:100vh !important; position: absolute !important; top:0; left:0;  
     }
     .hero-headline-wrap{
       width:100%; padding: 100px 14vw; z-index: 10;
